--- a/alpha_web_client/index.html
+++ b/alpha_web_client/index.html
@@ -5,7 +5,7 @@
     <!--<link rel="icon" href="/favicon.ico">-->
     <link rel="icon" type="image/png" href="/src/assets/kayeet_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>KaYeet?!</title>
   </head>
   <body>
     <div id="app"></div>
